Fix copyright on smaller screens

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -747,3 +747,7 @@ div.subject-timeline
     
     #loader
       left: 17%
+  
+  .copyright
+    max-width: 82%
+    padding-right: 1%
